--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "globals": "^15.13.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.83.0",
     "ts-jest": "^29.2.5",
     "typescript-eslint": "^8.18.0"
   }
