--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "web-vitals": "^2.1.4",
     "xu_hang_ui_garden_build_checks": "^1.0.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
-    "lint": "eslint src/**/*.{ts,tsx,js,jsx}",
-    "test": "react-scripts test",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
+"scripts": {
+  "start": "react-scripts start",
+  "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
+  "lint": "eslint src/**/*.{ts,tsx,js,jsx}",
+  "test": "react-scripts test",
+  "build": "react-scripts build",
+  "check": "npm run format && npm run lint && npm test",
+  "eject": "react-scripts eject"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -60,6 +62,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.13.0",
     "jest": "^29.7.0",
