ci-pipeline.yml fixed (testing)

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
 
       - name: Install Dependencies
         run: npm install
@@ -29,3 +29,6 @@ jobs:
 
       - name: Run Tests
         run: npm test
+
+      - name: Build Project
+        run: npm run build
